correccion de valores dinamicos

--- a/proceso/task_load.ipynb
+++ b/proceso/task_load.ipynb
@@ -209,7 +209,7 @@
     "# creacion de la tabla sales_ordes en el schema golden\n",
     "\n",
     "spark.sql(f\"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS dev_ecommerce.golden.sales_orders\n",
+    "    CREATE TABLE IF NOT EXISTS {catalog_param}.{container['destino']}.sales_orders\n",
     "    USING DELTA\n",
     "    LOCATION '{golden_path}'\n",
     "\"\"\")"
